made sure theres a gap when in hours container at the side and that the background changes depending on whether its between 6am and pm and changes icon finder into array to avoid long code

--- a/style.css
+++ b/style.css
@@ -19,9 +19,10 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url('day.jpg') ;
+    background-image: url('../images/night.jpg') ;
     background-size: cover;
     font-family: 'SF Pro Bold';
+    transition: background-image 1s ease-in-out;
 }
 
 
@@ -78,17 +79,24 @@ body {
 
 .hours-container {
     display: flex;
-    width: calc(100% + 60px); 
+
+    width: 100%; 
     margin-left: -30px; 
     margin-right: -30px;
+    
     gap: 1rem;
     overflow-x: auto;
-    padding-bottom: 3rem;
+    
+    padding-left: 30px;
+    padding-right: 30px; 
+    
+    scroll-padding-inline: 30px;
 
+    padding-bottom: 3rem;
     scroll-behavior: smooth;
+    
     -ms-overflow-style: none;
     scrollbar-width: none;
-
 }
 
 .hrs-container::-webkit-scrollbar {
